[FIX] Contact form overlapping with header
- Added a margin-top
- This will push the container down

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -706,8 +706,8 @@
   text-align: center;
   height: 100vh; }
   .contact-body .contact-body-container {
-    margin-top: 10rem;
-    margin-bottom: 100px;
+    margin-top: 130px;
+    margin-bottom: 80px;
     width: 80%;
     height: 100%; }
     .contact-body .contact-body-container .contact-card {
