--- a/assets/scss/1-home/_home-contact.scss
+++ b/assets/scss/1-home/_home-contact.scss
@@ -7,8 +7,8 @@
     height: 100vh;
 
     .contact-body-container{
-        margin-top: 10rem;
-        margin-bottom: 100px;
+        margin-top: 130px;
+        margin-bottom: 80px;
         width: 80%;
         height: 100%;
         // position: relative;
